--- a/airbnb-experiences-clone/src/style.css
+++ b/airbnb-experiences-clone/src/style.css
@@ -53,74 +53,13 @@ nav {
 }
 
 .cards {
+  width: 175px;
+  height: auto;
+  font-size: 12px;
+  flex: 0 0 auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 175px;
-  font-size: 12px;
-}
-
-.cards .zaferes {
-  align-self: center;
-  border-radius: 9px;
-  font-size: 12px;
-  margin-right: 15px;
-  margin-left: 15px;
-}
-.cards .zaferes .img {
-  align-self: center;
-  border-radius: 9px;
-  font-size: 12px;
-}
-.cards .bike {
-  align-self: center;
-  width: 175px;
-  border-radius: 9px;
-  font-size: 12px;
-  margin-left: 15px;
-  margin-top: 20px;
-}
-.cards .bike .img {
-  align-self: center;
-  border-radius: 9px;
-  font-size: 12px;
-}
-
-.cards .wedding {
-  align-self: center;
-  border-radius: 9px;
-  font-size: 12px;
-}
-.cards .wedding .img {
-  align-self: center;
-  border-radius: 9px;
-  font-size: 12px;
-}
-
-.cards .boxzaferes {
-  font-size: 10.24px;
-  line-height: 11.26px;
-  position: absolute;
-  width: 61px;
-  height: 20px;
-  left: 26px;
-  top: 507px;
-  background: #ffffff;
-  border-radius: 2px;
-  border: none;
-}
-
-.cards .boxwedding {
-  font-size: 10.24px;
-  line-height: 11.26px;
-  position: absolute;
-  width: 61px;
-  height: 20px;
-  left: 215px;
-  top: 507px;
-  background: #ffffff;
-  border-radius: 2px;
-  border: none;
+  flex-direction: column;
+  position: relative;
 }
 
 .cards .star {
@@ -129,10 +68,42 @@ nav {
   border-radius: 0.5px;
 }
 
+.cards .badge {
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+}
+
+section {
+  padding: 20px;
+}
+
+.cards .title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cards .img {
+  width: 100%;
+  height: 225px;
+  border-radius: 9px;
+  margin-bottom: 9px;
+}
+
 .bold {
   font-weight: bold;
 }
 
-.grey {
+.gray {
   color: grey;
 }
